--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <header>
         <h1>Our Team</h1>
     </header>
-    <main></main>
+    <main>
+        <ul>
+            <li id="team1"> Team1</li>
+            <li id="team2"> Team1</li>
+            <li id="team3"> Team1</li>
+            <li id="team4"> Team1</li>
+            <li id="team5"> Team1</li>
+            <li id="team6"> Team1</li>
+        </ul>
+    </main>
     <script src="js/index.js"></script>
 </body>
 </html>
